methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs: error: not found: value move
		move(getY(),getDirection() == Direction.NORTH); 
                ^MethodsArgs:5: error: not found: value isFacingTrail
  if (isFacingTrail()==true){
      ^MethodsArgs:12: error: not found: value isFacingTrail
    } while( isFacingTrail()==true)
             ^MethodsArgs:21: error: not found: value isFacingTrail
    if (isFacingTrail()==true){
        ^MethodsArgs:28: error: not found: value isFacingTrail
      } while( isFacingTrail()==true)
               ^MethodsArgs:39: error: not found: value isFacingTrail
      } while( isFacingTrail()==true)
               ^