methods.args.MethodsArgs.scala.code
def hunt() {


  if (isFacingTrail()==true){
    do { 
      baisseBrosse()
      avance()
      leveBrosse()


    } while( isFacingTrail()==true)
  }

  else{


    gauche()
    avance()

    if (isFacingTrail()==true){
      do { 
        baisseBrosse()
        avance()
        leveBrosse()


      } while( isFacingTrail()==true)
    }
    else {
      droite()
      avance()
      do { 
        baisseBrosse()
        avance()
        leveBrosse()


      } while( isFacingTrail()==true)

    }
      }
    }
